--- a/src/app/molecula/main/cached-info/cached-info.component.html
+++ b/src/app/molecula/main/cached-info/cached-info.component.html
@@ -1,11 +1,11 @@
 <div class="cached">
     <div class="cached-card" *ngFor="let cachedCity of cachedCitiesString">
-        <h4>{{cachedCity.name}}</h4>
-        <app-date></app-date>
+        <h2>{{cachedCity.name}}</h2>
+        <app-date [smaller]="true"></app-date>
         <div class="cached-card__footer">
             <div>
-                <p><b>{{cachedCity.main.temp_min}}</b></p>
-                <p><b>{{cachedCity.main.temp_max}}</b></p>
+                <p><b>{{cachedCity.main.temp_min}} °C</b></p>
+                <p><b>{{cachedCity.main.temp_max}} °C</b></p>
             </div>
             <app-clouds [clouds]="cachedCity.weather[0].description"></app-clouds>
         </div>
