--- a/src/app/atom/main/date/date.component.html
+++ b/src/app/atom/main/date/date.component.html
@@ -1,3 +1,3 @@
 <div class="date-container">
-    <p>{{formattedDate}}</p>
+    <p [ngClass]="{'smaller': smaller, 'bigger': !smaller} ">{{formattedDate}}</p>
 </div>
