--- a/src/app/atom/main/date/date.component.scss
+++ b/src/app/atom/main/date/date.component.scss
@@ -5,7 +5,13 @@
     height: 100%;
     p{
         display: block;
-        font-size: 24px;
         font-weight: 200;
     }
+}
+
+.smaller{
+    font-size: 16px;
+}
+.bigger{
+    font-size: 24px;
 }
