--- a/src/app/molecula/main/cached-info/cached-info.component.scss
+++ b/src/app/molecula/main/cached-info/cached-info.component.scss
@@ -11,7 +11,10 @@
     box-shadow: 2px 4px 10px 0px rgba(0, 0, 0, 0.06); 
     & .cached-card__footer{
         display: flex;
-        gap: 48px;
+        gap: 36px;
+    }
+    & h2{
+        font-size: 24px;
     }
 }
 .cached{
